# multimodal-rag

./: .env  index.html  wyren_基于VLM构建多模态RAG问答系统实战.ipynb  基于VLM构建多模态RAG问答系统实战.ipynb
backend/: .env.example  main_service.py  qwen_embeddings.py  requirements_service.txt  simple_logger.py  start_service.sh  start_service_debug.sh  test_qwen_embedding.sh  test_service.py  view_logs.sh
backend/Information-Extraction/04_vlm_based/markpdfdown/: .env.sample  CHANGELOG.md  Dockerfile  README.md  README_ar.md  README_fa.md  README_ja.md  README_ru.md  README_zh.md  pyproject.toml  run_markpdfdown.py
backend/Information-Extraction/04_vlm_based/markpdfdown/.github/workflows/: changelog.yml  pre_release.yml  release.yml
backend/Information-Extraction/04_vlm_based/markpdfdown/scripts/: convert_with_markpdfdown.py
backend/Information-Extraction/04_vlm_based/markpdfdown/src/markpdfdown/: __init__.py  __main__.py  cli.py  config.py  main.py
backend/Information-Extraction/04_vlm_based/markpdfdown/src/markpdfdown/core/: __init__.py  file_worker.py  llm_client.py  utils.py
backend/knowledge-base-api/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/knowledge-base-api/migrations/alembic/: env.py
backend/knowledge-base-api/src/: main.py
backend/knowledge-base-api/src/api/: dependencies.py
backend/knowledge-base-api/src/api/v1/: router.py
backend/knowledge-base-api/src/api/v1/endpoints/: chunks.py  files.py  knowledge_base.py  search.py
backend/knowledge-base-api/src/core/: config.py  database.py  security.py
backend/knowledge-base-api/src/crud/: chunks.py  files.py  knowledge_base.py
backend/knowledge-base-api/src/db/milvus/: client.py  collections.py
backend/knowledge-base-api/src/db/sql/: models.py  session.py
backend/knowledge-base-api/src/schemas/: chunks.py  files.py  knowledge_base.py  responses.py
backend/knowledge-base-api/src/services/: chunk_service.py  file_service.py  knowledge_base_service.py  vector_service.py
backend/knowledge-base-api/src/utils/: embedding.py  file_handler.py  logger.py
backend/knowledge-base-api/tests/: conftest.py
backend/knowledge-base-api/tests/test_api/: test_endpoints.py
backend/knowledge-base-api/tests/test_services/: test_vector_service.py
chroma_db/: chroma.sqlite3
chroma_db_floor_plan/: chroma.sqlite3
frontend/: .env.development  .env.example  .gitignore  API_SPEC.md  App.test.tsx  App.tsx  CLAUDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  index.html  index.html.1  main.tsx  package-lock.json  package.json  tailwind.config.js  test-center.html  tsconfig.json  vite.config.ts
wyren/: readme.md
(+779 files in other folders)
