[tool]
name = "knowledge-base-api"
version = "0.1.0"
description = "A FastAPI project for storing, retrieving, and managing knowledge base data with SQL and Milvus."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
pydantic = "^1.8.2"
milvus = "^2.0.0"
alembic = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"